Remove runtime add-opens checks
These are no longer required

Cherry-pick from https://github.com/starburstdata/starburst-enterprise/commit/0880ae1baef4471f9d18dcd32dc8d5bdfb35a094

(cherry-picked from commit: 41ae7636482ef657b90f5bac57d2e6c4347cd0e0)